--- a/01 Data Processing and EDA.ipynb
+++ b/01 Data Processing and EDA.ipynb
@@ -399,7 +399,7 @@
    "metadata": {},
    "source": [
     "**Topic 2: Relationship between Cryptocurrency Prices**  \n",
-    "Since Bitcoin and Ethereum are the two most dominant coins in the cryptocurrency market, price movements of smaller coins tends to mirror the price movements in the two leader coins. The correlation tables show high positive correlations between the prices. The correlation between the log differenced prices is very similar regardless of whether daily, weekly, or biweekly log differenced price is used, so only the correlation table for 14 lags is shown."
+    "Since Bitcoin and Ethereum are the two most dominant coins in the cryptocurrency market, price movements of smaller coins tends to mirror the price movements in the two leader coins. The correlation tables show high positive correlations between the prices. The correlation between the log differenced prices is very similar regardless of whether daily, weekly, or biweekly log differenced price is used, so only the correlation table for biweekly log differenced price is shown."
    ]
   },
   {
@@ -567,7 +567,7 @@
     }
    ],
    "source": [
-    "# Pearson Correlations of Log Difference of Price (14 lags)\n",
+    "# Pearson Correlations of Biweekly Log Difference of Price\n",
     "corrmat_logdif = main[[\"logdif14_XBT\", \"logdif14_ETH\", \"logdif14_ADA\", \"logdif14_XMR\"]].corr(method = \"pearson\")\n",
     "corrmat_logdif"
    ]
